syntax = "proto3";

// ComponentDefinition.ComponentID=13;
// This parameter is processed by the tool

package decentraland.ecs;
option csharp_namespace = "DCL.ECSComponents";

message PBNFTShape {
  bool with_collisions = 1;
  bool is_pointer_blocker = 2;
  bool visible = 3;
  string src = 4;
  string asset_id = 5;
  int32 style = 6;
  Color3 color = 7;
}

message Color3 {
  float r = 1;
  float g = 2;
  float b = 3;
}
